--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                officia sit iste nobis autem sed et?
             </p>
             <div class="social__media">
-               <a href="#" style="--i: 6"
+               <a href="https://www.instagram.com/marcoskdev/" style="--i: 6"
                   ><i class="bx bxl-instagram-alt"></i
                ></a>
-               <a href="#" style="--i: 7"
+               <a href="https://www.linkedin.com/in/marcos-kaynan-850528300/" style="--i: 7"
                   ><i class="bx bxl-linkedin-square"></i
                ></a>
-               <a href="#" style="--i: 8"><i class="bx bxl-github"></i></a>
-               <a href="#" style="--i: 9"><i class="bx bxl-youtube"></i></a>
+               <a href="https://github.com/MarcoskDev" style="--i: 8"><i class="bx bxl-github"></i></a>
+               <a href="https://youtube.com/@marcosdev9391?si=uhPaEDfzkgOAv-Tn" style="--i: 9"><i class="bx bxl-youtube"></i></a>
             </div>
             <a class="btn__cv" href="#">Download CV</a>
          </div>
@@ -118,15 +118,40 @@
             <div class="box__p">
                <img
                   class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
+                  src="assets/img/Banner-projeto-TaskList-MA.png"
                   alt=""
                />
                <h3>Sobre:</h3>
                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
+                  Este projeto de To-Do List foi desenvolvido durante o desafio do Programa Trilhas - Inova Maranhão 
+                  para demonstrar o que aprendemos durante o programa. <br><br>
+                  A aplicação web de gerenciamento de tarefas (To-Do List) foi construída com React, TypeScript e CSS. Ela permite que você adicione, edite, conclua e remova tarefas facilmente. Quando uma tarefa é concluída, ela é movida para uma seção específica e pode ser retornada à lista principal se necessário. O projeto também inclui alertas animados que informam sobre a criação, edição, conclusão e remoção de tarefas, garantindo uma experiência do usuário agradável.
                </p>
+               <a href="https://marcoskdev.github.io/projeto-fokus-curso-alura/">Clique aqui para ver o projeto</a><br>
+               <a href="https://github.com/MarcoskDev/projeto-fokus-curso-alura?tab=readme-ov-file">Clique aqui para ver o projeto no GitHub</a>
+               <div class="linguagens__utilizadas">
+                  <span>React</span>
+                  <span>TypeScript</span>
+                  <span>CSS</span>
+                  <span>LocalStorage</span>
+               </div>
+            </div>
+
+            <div class="box__p">
+               <img
+                  class="capa__projeto"
+                  src="assets/img/Banner-projeto-Fokus.png"
+                  alt=""
+               />
+               <h3>Sobre:</h3>
+               <p>
+                  Fokus é uma página web que facilita a organização do dia a dia. Com ela, você pode gerenciar 
+                  suas tarefas, definir prioridades e acompanhar o progresso, tudo de forma simples e eficiente. 
+                  A interface é fácil de usar, e o design se adapta a qualquer dispositivo, ajudando você a se 
+                  concentrar no que realmente importa.
+               </p>
+               <a href="https://marcoskdev.github.io/projeto-fokus-curso-alura/">Clique aqui para ver o projeto</a><br>
+               <a href="https://github.com/MarcoskDev/projeto-fokus-curso-alura?tab=readme-ov-file">Clique aqui para ver o projeto no GitHub</a>
                <div class="linguagens__utilizadas">
                   <span>Html</span>
                   <span>css</span>
@@ -137,150 +162,15 @@
             <div class="box__p">
                <img
                   class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
+                  src="assets/img/Banner-projeto-MarcosKBank.png"
                   alt=""
                />
                <h3>Sobre:</h3>
                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
+                  MarcosKBank é uma página web desenvolvida para simular um banco online. O projeto inclui funcionalidades como criação de contas e verificação por foto. Além disso, oferece uma interface intuitiva para que os usuários possam realizar operações bancárias de forma segura e conveniente. Durante o desenvolvimento, foram implementadas técnicas avançadas de validação de dados e autenticação de usuários para garantir a segurança.
                </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-
-            <div class="box__p">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
-               <div class="linguagens__utilizadas">
-                  <span>Html</span>
-                  <span>css</span>
-                  <span>javaScript</span>
-               </div>
-            </div>
-         </div>
-
-         <div class="designer">
-            <div class="box__d">
-               <img
-                  class="capa__projeto"
-                  src="assets/img/traprojto.jpg"
-                  alt=""
-               />
-               <h3>Sobre:</h3>
-               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Officia porro asperiores saepe beatae. Perferendis modi
-                  necessitatibus quidem tempora iste quasi.
-               </p>
+               <a href="https://marcoskdev.github.io/Marcoskbank-projeto-curso-alura/">Clique aqui para ver o projeto</a><br>
+               <a href="https://github.com/MarcoskDev/Marcoskbank-projeto-curso-alura?tab=readme-ov-file">Clique aqui para ver o projeto no GitHub</a>
                <div class="linguagens__utilizadas">
                   <span>Html</span>
                   <span>css</span>
@@ -299,19 +189,18 @@
                <i class="bx bxl-html5"></i>
                <i class="bx bxl-css3"></i>
                <i class="bx bxl-javascript"></i>
+               <i class="bx bxl-figma"></i>
                <i class="bx bxl-github"></i>
                <i class="bx bxl-git"></i>
-               <i class="bx bxl-typescript"></i>
-               <i class="bx bxl-nodejs"></i>
-               <i class="bx bxl-figma"></i>
-               <i class="bx bxl-react"></i>
             </div>
          </div>
          <div class="tecnologias__uso">
             <h3>Outras techs com que já realizei projetos</h3>
             <div class="Tecnologias">
-               <i class="bx bxl-vuejs"></i>
+               <i class="bx bxl-typescript"></i>
                <i class="bx bxl-nodejs"></i>
+               <i class="bx bxl-react"></i>
+               <i class="bx bxl-vuejs"></i>
                <i class="bx bxl-sass"></i>
                <a href="https://icons8.com/icon/w0gLt4XNjxKm/mysql"></a>
                <a href="https://icons8.com"></a>
@@ -447,10 +336,10 @@
                <h2>Ou contate-me aqui</h2>
                <div class="meios_de_contato">
                   <div class="div__icones__contato">
-                     <a href="#"><i class="bx bxl-github"></i></a>
+                     <a href="https://github.com/MarcoskDev"><i class="bx bxl-github"></i></a>
                   </div>
                   <div class="div__icones__contato">
-                     <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+                     <a href="https://www.linkedin.com/in/marcos-kaynan-850528300/"><i class="bx bxl-linkedin-square"></i></a>
                   </div>
                   <div class="div__icones__contato div__grande">
                      <a href="#"><i class="bx bxs-envelope"></i></a>
